Changed 'name' to 'username' in forms. Corrected message sent to websocket server after uploading an image. Changed log message format.

--- a/telepict/templates/create_account.html
+++ b/telepict/templates/create_account.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="form-group">
-          <label for="input-name">Name </label>
+          <label for="input-name">Username </label>
           <input id="input-name" type="text" name="name" autocomplete="username" class="form-control" required />
         </div>
       </div>
