--- a/telepict/templates/login.html
+++ b/telepict/templates/login.html
@@ -6,7 +6,7 @@
     <div class="col-md-4">
       <form action="{{ url_for('auth.login') }}" method='post'>
         <div class="form-group">
-          <label for="input-name">Name </label>
+          <label for="input-name">Username </label>
           <input id="input=name" type="text" name="name" class="form-control" required />
         </div>
         <div class="form-group">
