Added note to password selection form

--- a/telepict/templates/edit_account.html
+++ b/telepict/templates/edit_account.html
@@ -14,7 +14,7 @@
         <div class="form-group">
         <label for="input-pwd">Change Password</label>
         <input id="input-pwd" type="password" name="password" class="form-control" pattern=".{8,}" autocomplete="new-password" />
-          <small class="form-text text-muted">At least 8 characters</small>
+          <small class="form-text text-muted">At least 8 characters - do not use a password you use elsewhere</small>
         </div>
       </div>
       <div class="col-md-2">
