--- a/telepict/templates/create_account.html
+++ b/telepict/templates/create_account.html
@@ -33,7 +33,7 @@
         <div class="form-group">
         <label for="input-pwd">Password</label>
         <input id="input-pwd" type="password" name="password" autocomplete="new-password" class="form-control" pattern=".{8,}" required />
-          <small class="form-text text-muted">At least 8 characters</small>
+          <small class="form-text text-muted">At least 8 characters - do not use a password you use elsewhere</small>
         </div>
       </div>
       <div class="col-md-4">
