Generalized the JS for copying the contents of a text box with a button, used it for the game spectate URL

--- a/telepict/templates/create_account.html
+++ b/telepict/templates/create_account.html
@@ -13,7 +13,7 @@
       <div class="col-md-4">
         <div class="form-group">
           <label for="input-dispname">Display Name</label>
-          <input id="input-dispname" type="text" name="dispname" class="form-control" required />
+          <input id="input-dispname" type="text" name="dispname" class="form-control" autocomplete="off" required />
           <small class="form-text text-muted">You can change this later</small>
         </div>
       </div>
