--- a/telepict/templates/base.html
+++ b/telepict/templates/base.html
@@ -4,6 +4,18 @@
     {% block head -%}
     <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script>
+      function copyTextBox(button) {
+        var input = document.querySelector('#' + button.dataset.copies);
+
+        /* Select the text field */
+        input.select();
+        input.setSelectionRange(0, 99999); /*For mobile devices*/
+
+        /* Copy the text inside the text field */
+        document.execCommand("copy");
+      }
+    </script>
 
     <title>Telepict - {% block title %}{% endblock %}</title>
 
