--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -11,14 +11,13 @@
     }
 
     function resetDisplay() {
+      // Reset current action displau
       while (disp.firstChild) {
         disp.removeChild(disp.firstChild);
       }
+      // Hide inputs
       textInputDiv.style.display = 'none';
       imageInputDiv.style.display = 'none';
-      canvasDraw.reset();
-      textInput.value = "";
-      imgUpload.value = "";
     };
   </script>
 {% endblock %}
@@ -105,6 +104,7 @@
         ws.send(JSON.stringify({'action': 'writing',
                                 'text': writing}));
         updateDisplaySent('writing');
+        textInput.value = "";
       }
     }
     handlers.view_own = function(data) {
