--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -144,8 +144,8 @@
     };
 
     window.onload = function() {
-      // Reset color selector color to keep it in sync with canvasDraw
-      colorSelector.jscolor.fromRGBA(0, 0, 0, 1.0);
+      // Sync canvasDraw color with color selector
+      canvasDraw.setColor(colorSelector.jscolor.toHEXString());
     };
 
   </script>
