Improved access code script/file to support multiple access codes, specified lifetimes, embedding access codes in invitation URLs

--- a/telepict/templates/create_account.html
+++ b/telepict/templates/create_account.html
@@ -46,7 +46,7 @@
       <div class="col-md-4">
         <div class="form-group">
           <label for="access-code">Access Code</label>
-          <input id="access-code" type="text" name="accessCode" class="form-control" required />
+          <input id="access-code" type="text" name="accessCode" class="form-control" value="{{ access_code }}" required />
           <small class="form-text text-muted">Given to you by the host</small>
         </div>
       </div>
