Added refresh button to game index. Turned autocomplete off in game text input

--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div id="text-input-div" style="display: none">
-    <input id="text-input" size="100" type="text" />
+    <input id="text-input" size="100" type="text" autocomplete="off" />
     <button class="btn btn-primary" type="button" onclick="passWriting()">Submit</button>
   </div>
   <div class="row">
