Added client-side error handling when submitting images, removed updateDisplaySent to avoid blanking everything if submission goes wrong

--- a/telepict/templates/game.html
+++ b/telepict/templates/game.html
@@ -5,10 +5,10 @@
   {{ super() }}
   <script>
     endpoint = 'game';
-    function updateDisplaySent(type) {
-      resetDisplay();
-      disp.appendChild(h('p', {}, 'Passing ' + type + '...'));
-    }
+    // function updateDisplaySent(type) {
+    //   resetDisplay();
+    //   disp.appendChild(h('p', {}, 'Passing ' + type + '...'));
+    // }
 
     function resetDisplay() {
       // Reset current action displau
@@ -103,7 +103,7 @@
       if (writing != '') {
         ws.send(JSON.stringify({'action': 'writing',
                                 'text': writing}));
-        updateDisplaySent('writing');
+        // updateDisplaySent('writing');
         textInput.value = "";
       }
     }
